# shark

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: README.en.md
docs/plans/: 2026-04-02-phase1-detailed-plan.md  2026-04-02-phase1-implementation-plan.md  2026-04-02-shark-asset-manager-design.md  2026-04-03-e2e-integration-design.md  2026-04-05-smart-folders-design.md  2026-04-05-smart-folders-plan.md  2026-04-06-dedup-dialog-design.md  2026-04-06-dedup-dialog-plan.md  2026-04-08-import-drag-drop-design.md  2026-04-08-tag-management-design.md  2026-04-08-tag-management-plan.md  2026-04-12-smart-folder-preview-design.md  2026-04-13-regular-folders-plan.md  2026-07-01-auto-import-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: color.rs  commands.rs  db.rs  error.rs  indexer.rs  lib.rs  main.rs  models.rs  search.rs  thumbnail.rs  watcher.rs
src/components/Grid/: AssetCard.tsx  SelectionBar.tsx  TrashBar.tsx  VirtualGrid.tsx
src/components/Import/: DedupDialog.tsx  DropOverlay.tsx  ImportButton.tsx  ImportProgress.tsx
src/components/Inspector/: Inspector.tsx
src/components/Settings/: SettingsModal.tsx
src/components/Sidebar/: ColorFilter.tsx  CreateLibraryModal.tsx  FolderList.tsx  LibrarySelector.tsx  Sidebar.tsx  SidebarDropZone.tsx  SmartFolderEditor.tsx  (+2 more)
src/lib/: types.ts  updater.ts
src/stores/: filterStore.ts  folderStore.ts  itemStore.ts  uiStore.ts  viewStore.ts  watchedFolderStore.ts
(+5 files in other folders)
