[package]
name = "shark"
version = "0.1.0"
description = "Shark - Open-source asset manager"
authors = ["you"]
edition = "2021"

[lib]
name = "shark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "hooks", "functions", "vtab", "serde_json"] }
image = "0.25"
rayon = "1.11"
walkdir = "2"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
notify = "8"
notify-debouncer-full = "0.7"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
